<resources>
    <string name="app_name">PlanificateurBudgetaire</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="revenu">+ Revenu</string>
    <string name="depense">+ Dépense</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
    <string name="categorie">Catégorie</string>
    <string name="frequence">Fréquence</string>
    <string name="somme">Somme</string>
    <string name="dollar_sign">$</string>
    <string name="revenus">Revenus</string>
    <string name="depenses">Dépenses</string>
    <string name="argent_disponible">Argent disponible</string>
    <string name="budgetly">Budgetly</string>
    <string-array name="liste_categories_revenus">
        <item>Salaire</item>
        <item>Bourse</item>
        <item>Prime</item>
        <item>Pension de retraite</item>
        <item>Cadeau</item>
    </string-array>
    <string-array name="liste_categories_depenses">
        <item>Essence</item>
        <item>Épicerie</item>
        <item>Restaurant</item>
        <item>Médicaments</item>
        <item>Cinéma</item>
        <item>Assurance auto</item>
    </string-array>
    <string-array name="liste_frequences">
        <item>Hebdomadaire</item>
        <item>Bimensuel</item>
        <item>Mensuel</item>
    </string-array>
</resources>