<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAjoutDepense">


    <TableLayout
        android:layout_width="375dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp" >

            <TextView
                android:id="@+id/label_categorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:textSize="25sp"
                android:text="@string/categorie" />

            <Spinner
                android:id="@+id/spinner_categorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="10dp"
                android:entries="@array/liste_categories_depenses" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp" >

            <TextView
                android:id="@+id/label_frequence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:textSize="25sp"
                android:text="@string/frequence" />

            <Spinner
                android:id="@+id/spinner_frequence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="10dp"
                android:entries="@array/liste_frequences" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp" >

            <TextView
                android:id="@+id/label_somme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:textSize="25sp"
                android:text="@string/somme" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/label_dollar_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:padding="10dp"
                android:textSize="25sp"
                android:text="@string/dollar_sign" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bouton_annuler"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:paddingHorizontal="16dp"
            android:backgroundTint="@color/Black"
            android:textColor="@color/White"
            android:text="@string/annuler" />

        <Button
            android:id="@+id/bouton_ajouter"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:paddingHorizontal="16dp"
            android:backgroundTint="@color/Black"
            android:textColor="@color/White"
            android:text="@string/ajouter" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>