<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentAjoutRevenu">


    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="365dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/label_categorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/categorie"
                android:textSize="25sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_categorie_revenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:inputType="textCapWords"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/label_frequence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/frequence"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/spinner_frequence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:entries="@array/liste_frequences"
                android:padding="10dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/label_somme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/somme"
                android:textSize="25sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_somme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/label_dollar_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:padding="10dp"
                android:text="@string/dollar_sign"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bouton_annuler"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Black"
            android:paddingHorizontal="16dp"
            android:text="@string/annuler"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/bouton_ajouter"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/Black"
            android:paddingHorizontal="16dp"
            android:text="@string/ajouter"
            android:textColor="@color/White" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>